# xml2json-c

./: .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac  xml2json-c-0.1.pc  xml2json-c.pc.in
src/libs/: Makefile.am  Makefile.in  xml2json-c.c  xml2json-c.h
src/test/: Makefile.am  Makefile.in  main.c
src/tool/: Makefile.in  ipac2.xml  main.c
